--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
-    <string name="title_activity_feed">FeedActivity</string>
+    <string name="title_activity_feed">Feed</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
