rest of the owl

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,4 +187,5 @@
     <string name="title_activity_registration">Register</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_contact">ContactActivity</string>
 </resources>
